# rust-react-ssr-example

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.run  Makefile  README.md
examples/simple-ssr/actix-jsc/: actix_jsc.rs
examples/simple-ssr/actix-v8/: actix_v8.rs
examples/simple-ssr/run/: run.rs
examples/simple-ssr/run-jsc/: run_jsc.rs
examples/simple-ssr/run-v8/: run_v8.rs
examples/simple-ssr/source/: package.json  tsconfig.json
examples/simple-ssr/source/src/: App.css  App.tsx  ssr-entry.tsx
examples/simple-ssr/source/webpack/: webpack.client.js  webpack.ssr.js
src/: lib.rs  polyfill.rs  ssr_jsc.rs  ssr_v8.rs
